# PCCLEAN-APP

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  BUGFIX_CLEANING.md  BUILD_GUIDE.md  CLAUDE.md  COMPONENTES_SLINT.md  Cargo.toml  EXECUTIVE_SUMMARY.md  EXTENSIBILITY_GUIDE.md  FINAL_REPORT.md  GALERIA_TEMAS.md  INSTALADOR_PRONTO.txt  INSTALLER_SUMMARY.md  INSTALL_MACOS.md  LIMPEZA_POS_MIGRACAO.md  MACOS_INSTALLER_COMPLETE.md  MATERIAL_DESIGN_APPLIED.md  MIGRACAO_RESUMO.md  MIGRACAO_SLINT.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  RELEASE_GUIDE.md  SLINT_BEST_PRACTICES.md  TEMAS.md  TESTING_GUIDE.md  VERIFICATION_CHECKLIST.md
.github/workflows/: build-macos-installer.yml
macos-installer/: QUICK_START.md  README.md  build-installer.sh  create-icon.sh  demo.sh  install.sh  sign-and-notarize.sh  test-installer-system.sh  uninstall.sh
src/: cleaner.rs  main.rs  scanner.rs  ui.rs
src/application/: mod.rs
src/application/use_cases/: clean_selected_categories_use_case.rs  mod.rs  scan_system_use_case.rs
src/domain/: mod.rs
src/domain/entities/: cleanable_category.rs  cleanable_item.rs  mod.rs  scan_result.rs
src/domain/repositories/: cleaner_repository.rs  mod.rs  scanner_repository.rs
src/domain/services/: mod.rs
src/domain/value_objects/: category_type.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: filesystem_cleaner_repository.rs  filesystem_scanner_repository.rs  mod.rs
src/presentation/: app.rs  mod.rs  slint_app.rs  theme.rs
src/presentation/themes/: mod.rs  ultra_modern.rs
src/presentation/widgets/: category_widget.rs  mod.rs
src/shared/: formatters.rs  mod.rs
ui/: app.slint  theme.slint  types.slint
ui/components/: ActionButtons.slint  CategoriesList.slint  CategoryCard.slint  ConfirmDialog.slint  GlassCard.slint  Header.slint  ModernButton.slint  StatsCard.slint  StatusBar.slint
