[package]
name = "pcclean-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", features = ["wgpu"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["image", "all_loaders"] }
egui_plot = "0.28"
epaint = "0.28"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
regex = "1.10"
chrono = "0.4"
anyhow = "1.0"
byte-unit = "5.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
