[package]
name = "pcclean-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", features = ["wgpu"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["image", "all_loaders"] }
egui_plot = "0.28"
epaint = "0.28"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
regex = "1.10"
chrono = "0.4"
anyhow = "1.0"
byte-unit = "5.1"

# Perfil para desenvolvimento com otimizações básicas
# Use: cargo build --profile dev-opt
[profile.dev]
opt-level = 0        # Sem otimizações - build rápido
debug = true         # Símbolos de debug completos

# Perfil otimizado para desenvolvimento/testes
# Use: cargo build --profile dev-opt
[profile.dev-opt]
inherits = "dev"
opt-level = 1        # Otimizações básicas
debug = true         # Mantém debug info
codegen-units = 16   # Paralelização máxima

# Perfil para releases rápidos durante desenvolvimento
# Use: cargo build --profile fast-release
[profile.fast-release]
inherits = "release"
opt-level = 2        # Bom equilíbrio velocidade/performance
lto = "thin"         # LTO rápido
codegen-units = 8    # Alguma paralelização
debug = false        # Sem debug info

# Perfil para release final (máxima otimização)
# Use: cargo build --release
[profile.release]
opt-level = 3        # Máxima otimização
lto = true           # LTO completo (lento mas melhor binário)
codegen-units = 1    # Máxima otimização
strip = true         # Remove símbolos (binário menor)
debug = false        # Sem debug info
panic = "abort"      # Menor binário
